# tang

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  decision.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/commands/: tang.md
.opencode/tools/: tang_contract_probe.ts  tang_current_target.ts  tang_predecessor_context.ts
docs/: antigravity-handoff.md  claude-handoff.md  conflicting-source-constraints.md  cursor-handoff.md  demo_script.md  doctor-performance.md  epic8-compatibility-baseline.md  getting-started.md  grok-handoff.md  harness-matrix.md  native-write-policy.md  opencode-contract.md  refresh-performance.md  session-continuity.md  tangspec.md  video-runbook.md
docs/assets/: README.md
docs/research/: README.md  claude-antigravity-session-storage.md  cross-project-discovery-opt-in.md  cursor-adapter-feasibility.md  cursor-storage-inventory.md  grok-full-parity-feasibility.md  harness-session-metadata-audit.md  project-identity-continuity.md
scripts/: benchmark_refresh.py  build_release.py  capture_demo_hero.py  functional_acceptance.py  prepare_video_lab.py  probe_opencode_contract.py
skills/claude/tang/: SKILL.md
skills/cursor/tang/: SKILL.md
skills/opencode/tang/: SKILL.md
skills/tang/: SKILL.md
skills/tang/agents/: openai.yaml
src/tang/: __init__.py  __main__.py  adapter_registry.py  capsule.py  cli.py  context.py  context_service.py  continuation.py  continuation_persistence.py  continuity_brief.py  cursor_sidecar.py  demo.py  discovery.py  doctor.py  graph.py  harness_capabilities.py  health.py  index_catalog.py  indexing.py  multicontext.py  multiverse_material.py  project.py  redaction.py  release.py  render.py  repository.py  resume.py  skill_install.py  storage.py  target.py  timeutil.py
src/tang/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  cursor.py  grok.py  incremental_checkpoint.py  opencode.py
tests/: conftest.py  test_adapter_contract.py  test_adapter_registry.py  test_antigravity_adapter.py  test_benchmark_script.py  test_capsule.py  test_capture_demo_hero.py  test_ci_workflow.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_codex_fixture.py  test_compatibility_baseline.py  test_context_pack.py  test_context_service.py  test_continuation.py  test_continuation_brief.py  test_continuation_persistence.py  test_continuity_brief.py  test_cursor_adapter.py  test_demo.py  test_discovery.py  test_discovery_corpus.py  test_distribution.py  test_doctor.py  test_functional_acceptance_script.py  test_graph.py  test_graph_cli.py  test_graph_fixture.py  test_grok_adapter.py  test_harness_capabilities.py  test_harness_parity.py  test_health.py  test_indexing.py  test_link_cli.py  test_multicontext.py  test_opencode_adapter.py  test_opencode_continuity_acceptance.py  test_opencode_contract_probe.py  test_opencode_contract_tool.py  (+15 more)
tests/fixtures/antigravity/: history.jsonl
tests/fixtures/claude/projects/-opt-tang-fixture/: 019f6000-c1a0-7000-8000-000000000001.jsonl
tests/fixtures/codex/: README.md
tests/fixtures/cursor/agent-transcripts/fixture-session/: fixture-session.jsonl
tests/fixtures/discovery/: README.md  expectations.json
tests/fixtures/discovery/codex-extra/: rollout-2026-07-14T21-00-00-019f6000-5678-7000-8000-000000000003.jsonl  rollout-2026-07-14T22-00-00-019f6000-5678-7000-8000-000000000004.jsonl  rollout-2026-07-14T23-00-00-019f6000-5678-7000-8000-000000000005.jsonl.partial
tests/fixtures/graph/: README.md  multiverse.json
tests/fixtures/grok/: README.md
tests/fixtures/opencode/: README.md  server-session-list.json  session-export-malformed.json  session-export.json  session-list-updated.json  session-list.json  tool-context.json
(+6 files in other folders)
