[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tang-multiverse"
version = "0.1.0"
description = "Continue coding-agent work across harnesses with source-cited context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.9,<15",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
tang = "tang.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/tang/skills/tang" = ["skills/tang/SKILL.md"]
"share/tang/skills/tang/agents" = ["skills/tang/agents/openai.yaml"]
