[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tang-multiverse"
version = "0.2.8"
description = "Continue coding-agent work across harnesses with source-cited context."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["codex", "grok", "developer-tools", "session-continuity"]
dependencies = [
  "rich>=13.9,<15",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DonnieFi/tang"
Issues = "https://github.com/DonnieFi/tang/issues"
Repository = "https://github.com/DonnieFi/tang.git"

[project.scripts]
tang = "tang.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/tang/skills/tang" = ["skills/tang/SKILL.md"]
"share/tang/skills/tang/agents" = ["skills/tang/agents/openai.yaml"]
"share/tang/opencode/skills/tang" = ["skills/opencode/tang/SKILL.md"]
"share/tang/opencode/commands" = [".opencode/commands/tang.md"]
"share/tang/opencode/tools" = [".opencode/tools/tang_current_target.ts"]
"share/tang/demo/codex/sessions/2026/07/14" = ["tests/fixtures/codex/sessions/2026/07/14/*.jsonl"]
"share/tang/demo/grok/sessions/%2Fwork%2Ftang-demo/019f6000-1234-7000-8000-000000000001" = ["tests/fixtures/grok/sessions/%2Fwork%2Ftang-demo/019f6000-1234-7000-8000-000000000001/*"]
"share/tang/demo/discovery/codex-extra" = ["tests/fixtures/discovery/codex-extra/*"]
"share/tang/demo/graph" = ["tests/fixtures/graph/multiverse.json"]
